k8s/keycloak-dev.yml
# Keycloak Deployment and Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-deployment
  namespace: pbl
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      imagePullSecrets:
        - name: ghcr
      containers:
      - name: keycloak
        image: ghcr.io/abhirambsn/pbl-keycloak:latest
        command: 
          - "/opt/keycloak/bin/kc.sh"
          - "start"
          - "--hostname"
          - "https://keycloak.convobot.cloud"
          - "--hostname-backchannel-dynamic"
          - "true"
        ports:
        - containerPort: 8080
        - containerPort: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: pbl
spec:
  type: ClusterIP
  selector:
    app: keycloak
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    name: http
  - protocol: TCP
    port: 8443
    targetPort: 8443
    name: https
