k8s/queue.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: queue-deployment
  namespace: pbl
  labels:
    app: queue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: queue
  template:
    metadata:
      labels:
        app: queue
    spec:
      containers:
      - name: queue
        image: admiralpiett/goaws
        ports:
        - containerPort: 4100
---
apiVersion: v1
kind: Service
metadata:
  name: queue
  namespace: pbl
spec:
  type: ClusterIP
  selector:
    app: queue
  ports:
  - protocol: TCP
    port: 4100
    targetPort: 4100
    name: http
